--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,15 +4,38 @@
 	<title>Sign Up</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<style type="text/css">
+		body{
+			margin:30px auto;
+			text-align: center ;
+			background-color: cyan ;
+		}
+		form{
+			margin-top: 30px ;
+			padding: 30px ;
+		}
+		input, select{
+			margin:20px;
+		}
+		.jumbotron h1{
+			font-size: 26px ;
+		}
+	</style>
 </head>
 <body>
+	<h1>SignUp to use NoticeBoard</h1>
 	<form method="post" action="/signup" >
-		<input type="text" name="username">
-		<input type="password" name="password">
-		<select name="type">
+		<label>Username:<input type="text" name="username"></label>
+		<br>
+		<label>Password:<input type="password" name="password"></label>
+		<br>
+		<label>What are you?
+			<select name="type">
 			<option value="teacher">TEACHER</option>
 			<option value="student">STUDENT</option>
 		</select>
+		</label>
+		<br>
 		<input type="submit" value="Submit">
 	</form>
 </body>
