--- a/views/board.ejs
+++ b/views/board.ejs
@@ -2,14 +2,97 @@
 <html>
 <head>
 	<title>Board</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<style type="text/css">
+		body{
+			margin:30px auto;
+			text-align: center ;
+			background-color: cyan ;
+		}
+		form{
+			margin-top: 30px ;
+			padding: 30px ;
+		}
+		input, select{
+			margin:20px;
+		}
+		ul li{
+			width: 80% ;
+			font-size: 20px ;
+			border-bottom:1px solid red;
+			padding: 15px ;
+			margin-top:20px;
+			margin-bottom:20px;
+		}
+		.board{
+			width:25%;
+			background-color: yellow;
+			border-radius: 15px ;
+			margin-left:38.5%;
+		}
+		.title{
+			font-size: 30px;
+			padding: 10px ;
+			border-bottom:1px solid orange;
+		}
+		.content{
+			text-align: left;
+			margin-top: 20px ;
+		}
+		ul{
+			list-style-type: none ;
+		}
+		.cross{
+			float: right;
+			right: 20px ;
+		}
+		.cross:hover{
+			cursor: pointer; 
+		}
+		.cross img{
+			width:12px;
+			height: 12px ;
+		}
+		.cross img:hover{
+			text-shadow: 10px 10px;
+		}
+		ul li a{
+			padding-bottom: 20px ;
+			text-decoration: none; 
+		}
+		ul li a:hover{
+			padding-bottom: 20px ;
+			text-decoration: none; 
+			color: red ;
+		}
+		.addNote{
+			padding: 5px ;
+			border-radius: 5px ;
+			margin-left: 10% ;
+			width: 80% ;
+			text-align: center;
+			font-size: 30px ;
+			color: yellow ;
+			background-color: orange ;
+		}
+		.addNote:hover{
+			cursor: pointer; 
+			transition-duration: 0.5s ;
+			background-color: red ;
+		}
+	</style>
 </head>
 <body>
-	<ul class="list">
-		<% for(var i=0; i<notices.length;i++){%>
-		<li><a href="board/view_notice/<%= notices[i].header%>"><%= notices[i].header%></a></li>
-		<%}%>
-	</ul>
+	<div class="board">
+		<div class="title">NOTICE</div>
+		<div class="content">
+			<ul class="list">
+				<% for(var i=0; i<notices.length;i++){%>
+				<li><a href="board/view_notice/<%= notices[i].header%>"><%= notices[i].header%></a> <span class="cross"><img src="images/glyphicons/png/glyphicons-208-remove.png"></span></li>
+				<%}%>
+			</ul>
+			<div class="addNote">ADD NOTICE</div>
+		</div>
+	</div>
 </body>
 </html>
