Change the href and place the div inside anchor tag

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -91,7 +91,7 @@
 				<li><a href="board/view_notice/<%= notices[i].header%>"><%= notices[i].header%></a> <span class="cross"><img src="images/glyphicons/png/glyphicons-208-remove.png"></span></li>
 				<%}%>
 			</ul>
-			<div class="addNote">ADD NOTICE</div>
+			<a href="/add_new"><div class="addNote">ADD NOTICE</div></a>
 		</div>
 	</div>
 </body>
