Add setting to prevent non admins from saving a post or deleting it

--- a/views/deletePage.ejs
+++ b/views/deletePage.ejs
@@ -69,7 +69,7 @@
 				if(response.success){
 					location.href = '/board'
 				}else{
-					alert('Document couldn\'t be deleted')
+					alert('Sorry, you dont have permission')
 				}
 			})
 		})
