--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,12 +20,20 @@
 		.jumbotron h1{
 			font-size: 26px ;
 		}
+
+		.notification{
+			border-radius: 10px ;
+			padding:20px ;
+			background-color: yellow ;
+			color: red ;
+			font-size: 20px ;
+		}
 	</style>
 </head>
 <body>
 	<%if(message){%>
 
-	<div class="notificationBox"><p>User with the same username exists, you might want to <a href="/login">login</a></p></div>
+	<div class="notificationBox"><p class="notification">User with the same username exists, you might want to <a href="/login">login</a></p></div>
 	<%}%>
 	<h1>SignUp to use NoticeBoard</h1>
 	<form method="post" action="/signup" onsubmit="return validateForm();">
