--- a/views/error.ejs
+++ b/views/error.ejs
@@ -16,11 +16,16 @@
 		p{
 			font-size: 20px;
 		}
+		img{
+			margin-top:30px ;
+			border-radius: 8px ;
+		}
 	</style>
 </head>
 <body>
 	<h2>Sorry, we couln't load this for you</h2>
 	<p><%= message %></p>
+	<img src="images/error.jpg">
 	<script type="text/javascript">
 	</script>
 </body>
