--- a/views/adminPanel.ejs
+++ b/views/adminPanel.ejs
@@ -36,19 +36,16 @@
 		ul{
 			list-style-type: none ;
 		}
-		.cross{
+		.gly{
 			float: right;
 			right: 20px ;
 		}
-		.cross:hover{
+		.gly:hover{
 			cursor: pointer; 
 		}
-		.cross img{
+		.gly img{
 			width:12px;
 			height: 12px ;
-		}
-		.cross img:hover{
-			text-shadow: 10px 10px;
 		}
 		ul li a{
 			padding-bottom: 20px ;
@@ -69,6 +66,26 @@
 		ul li{
 			text-align: left; 
 		}
+		.cr{
+			font-size: 20px ;
+		}
+		.red{
+			color: red ;
+		}
+		#usernameOfCr{
+			font-size: 16px ;
+		}
+		.crList ul li{
+			margin-bottom: 40px ;
+			border-bottom: 1px solid red ;
+		}
+		.dummy{
+			height: 2px ;
+		}
+		.remove img{
+			width: 20px ;
+			height: 20px ;
+		}
 	</style>
 </head>
 <body>
@@ -84,13 +101,13 @@
 			</ul>
 		</div>
 		<div class="students">
-			<p class="not_to_be_underlined">Students:</p>
+			<p>Students:</p>
 			<ul>
 				<%for(var i=0;i<users.length;i++){%>
-				<%if(users[i].type != 'teacher'){%>
+				<%if(users[i].type == 'student'){%>
 				<li><%=users[i].username%>
 					<a href="/make_admin_confirmation/<%=users[i].username%>">
-						<span class="cross"><img src="images/glyphicons/png/glyphicons-433-plus.png">
+						<span class="cross gly"><img src="images/glyphicons/png/glyphicons-433-plus.png">
 						</span>
 					</a>
 				</li>
@@ -98,6 +115,36 @@
 				<%}%>
 			</ul>
 		</div>
+		<% if(!cr){%>
+		<div class="cr">
+			<p id="usernameOfCr"><span class="red">There is currently no Class Representative.</span> To choose one, please type his/her username in the box and hit submit.</p>
+			<input type="text" name="username" class="username">
+			<input type="button" name="submit" value="Submit" class="submit">
+		</div>
+		<%}else{%>
+		<div class="crList">
+			<p>Class Representative</p>
+			<ul>
+				<li><%=cr.username%><a href="remove_cr/<%=cr.username%>"><span class="remove gly"><img src="/images/glyphicons/png/glyphicons-198-remove-circle.png"></span></a></li>
+			</ul>
+		</div>
+		<%}%>
+		<div class="dummy"></div>
 	</div>
+	<script type="text/javascript" src="javascripts/jquery.min.js"></script>
+	<script type="text/javascript">
+		$('.submit').click(function(){
+			$.post('/make_cr/'+$('.username').val() , function(response){
+				if(response.success){
+					var username = $('.username').val()
+					$('.board').append('<div class="crList"><p>Class Representative</p><ul><li>'+username+'<a href="remove_cr/'+username+'"><span class="remove gly"><img src="/images/glyphicons/png/glyphicons-198-remove-circle.png"></span></a></li></ul></div>')
+
+					$('.cr').remove();
+				}else{
+					console.log(response.message) ;
+				}
+			})
+		})
+	</script>
 </body>
 </html>
