Add image to error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -25,7 +25,7 @@
 <body>
 	<h2>Sorry, we couln't load this for you</h2>
 	<p><%= message %></p>
-	<img src="images/error.jpg">
+	<img src="/images/error.jpg">
 	<script type="text/javascript">
 	</script>
 </body>
