Add "ADD NOTICE" feature even for cr

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -97,7 +97,7 @@
 				</li>
 				<%}%>
 			</ul>
-			 <%if(type === 'teacher'){%>
+			 <%if(type === 'teacher' || type=== 'cr'){%>
 				<a href="/add_new"><div class="addNote">ADD NOTICE</div></a>
 			<%}%>
 		</div>
