--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,22 @@
 input{
 	display: inline-block; 
 }
+.navbar{
+	top: 0px ;
+	background-color: rgba(0,200,50,0.3) ;
+}
+.listH li{
+	font-size: 30px ;
+	float: left ;
+	width: 25%;
+	padding:40px;
+	color: red ;
+}
+.listH li a {
+	text-decoration: none ;
+	color: red ;
+}
+.listH li a:hover{
+	color: yellow;
+	transition-duration: 0.5s ;
+}
