Include header.ejs at the top

--- a/views/adminPanel.ejs
+++ b/views/adminPanel.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Board</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style type="text/css">
 		body{
 			margin:30px auto;
@@ -89,6 +90,8 @@
 	</style>
 </head>
 <body>
+
+	<% include header.ejs %>
 	<div class="board">
 		<div class="admins">
 			<p>Teachers:</p>
