--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,17 @@
 <div class="navbar">
 	<ul class="listH">
 		<li><a href="/board">BOARD</a></li>
-		<li><a href="/logout">LOGOUT</a></li>
+		<li><a href="#" class="logout">LOGOUT</a></li>
 		<li><a href="/signup">SIGNUP</a></li>
 		<li><a href="/signup">CHUTIYA</a></li>
 	</ul>
 </div>
+<script type="text/javascript" src="javascripts/jquery.min.js"></script>
+
+<script type="text/javascript" src="javascripts/jqueryCookie.js"></script>
+<script type="text/javascript">
+	$('.logout').click(function(){
+		$.removeCookie('token',$.cookie('token'), {expires: 1}, {domain: 'localhost:3000'});
+		location.href='/login' ;
+	})
+</script>
