Initialize filetest setup

--- a/views/addNotice.ejs
+++ b/views/addNotice.ejs
@@ -66,6 +66,7 @@
 		<div class="content">
 			<label>Content<br><textarea class="contentValue"></textarea></label>
 		</div>
+		<input type="file" name="image">
 
 		<div class="saveNote">SAVE</div>
 	</div>
