Add image tag to view the related images if any

--- a/views/showNotice.ejs
+++ b/views/showNotice.ejs
@@ -31,6 +31,9 @@
 <body>
 	<div class="board">
 		<div class="title"><%= notice.header%></div>
+		<%if(imageExists){%>
+		<img src="/noticeImage/<%=notice.header%>.png" width="90%" height="90%">
+		<%}%>
 		<div class="content"><%= notice.content%></div>
 	</div>
 </body>
