Change style of ADD NOTICE button

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -121,7 +121,7 @@
 			<%}%>
 
 			 <%if(type === 'teacher' || type=== 'cr'){%>
-				<a href="/add_new"><div class="addNote">ADD NOTICE</div></a>
+				<a href="/add_new" style="text-decoration: none"><div class="addNote">ADD NOTICE</div></a>
 			<%}%>
 
 
