--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,6 +22,11 @@
 			background-color: yellow ;
 			color: red ;
 			font-size: 20px ;
+		}p{
+			color: red ;
+		}
+		.btn{
+			text-decoration: none ;
 		}
 	</style>
 </head>
@@ -33,6 +38,8 @@
 	<label>Password:<input type="password" name="password" class="password"></label>
 	<br>
 	<input type="submit" value="Submit" id="submit">
+
+	<p>New users might want to <a href="/signup" class="btn">SIGNUP</a></p>
 	
 
 	<script type="text/javascript" src="javascripts/jquery.min.js"></script>
