--- a/views/addNotice.ejs
+++ b/views/addNotice.ejs
@@ -61,6 +61,9 @@
 		button{
 			border: none ;
 		}
+		.links{
+			margin-bottom: 20px ;
+		}
 	</style>
 </head>
 <body>
@@ -76,6 +79,8 @@
 				<label>Content<br><textarea class="contentValue" name="content"></textarea></label>
 			</div>
 			<input type="file" name="image" class="upload">
+			<p>List the links you want to save, 1 in each line</p>
+			<textarea class="links" name="links" style="resize: none; width: 80%; height: 10% ;"></textarea>
 			<button class="saveNote" type="submit">Save</button>
 		</form>
 	</div>
