--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,12 +6,4 @@
 		<li><a href="/signup">CHUTIYA</a></li>
 	</ul>
 </div>
-<script type="text/javascript" src="javascripts/jquery.min.js"></script>
-
-<script type="text/javascript" src="javascripts/jqueryCookie.js"></script>
-<script type="text/javascript">
-	$('.logout').click(function(){
-		$.removeCookie('token',$.cookie('token'), {expires: 1}, {domain: 'localhost:3000'});
-		location.href='/login' ;
-	})
-</script>
+<div class="toClearBoth"></div>
