--- a/views/moderationConfirmation.ejs
+++ b/views/moderationConfirmation.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Board</title>
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+	<% include styles.ejs %>
 	<style type="text/css">
 		body{
 			margin:30px auto;
@@ -54,6 +55,7 @@
 	</style>
 </head>
 <body>
+<% include header.ejs%>
 	<div class="board">
 		<div class="title"><p>Are you sure you want to moderate the following user?</p></div>
 		<div class="content"><%= user['username'] %></div>
@@ -62,6 +64,7 @@
 		<div class="dummy"></div>
 	</div>
 	<script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+	<% include scripts.ejs %>
 	<script type="text/javascript">
 		$('.yes').click(function(){
 			var url = '/moderation/apply/'+document.querySelector('.content').innerHTML ;
