--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,6 +4,7 @@
 	<title>Error</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<% include styles.ejs%>
 	<style type="text/css">
 		body{
 			margin:30px auto;
@@ -23,10 +24,12 @@
 	</style>
 </head>
 <body>
+<% include header.ejs%>
 	<h2>Sorry, we couln't load this for you</h2>
 	<p><%= message %></p>
 	<img src="/images/error.jpg">
 	<script type="text/javascript">
 	</script>
+<% include scripts.ejs%>
 </body>
 </html>
