--- a/views/makeAdminConfirmation.ejs
+++ b/views/makeAdminConfirmation.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Board</title>
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+	<% include styles.ejs%>
 	<style type="text/css">
 		body{
 			margin:30px auto;
@@ -56,6 +57,7 @@
 	</style>
 </head>
 <body>
+<% include header.ejs%>
 	<div class="board">
 		<div class="title"><p>Are you sure you want to make <span class="name"><%= username %></span> administrator?</p></div>
 		<div class="dummy"></div>
@@ -64,6 +66,7 @@
 		<div class="dummy"></div>
 	</div>
 	<script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+	<% include scripts.ejs %>
 	<script type="text/javascript">
 		$('.yes').click(function(){
 			var url = '/makeAdmin/'+document.querySelector('.name').innerHTML ;
