--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,9 +1,9 @@
 <div class="navbar">
 	<ul class="listH">
 		<li><a href="/board">BOARD</a></li>
-		<li><a href="#" class="logout">LOGOUT</a></li>
 		<li><a href="/signup">SIGNUP</a></li>
-		<li><a href="/signup">CHUTIYA</a></li>
+		<li><a href="#" class="logout">LOGOUT</a></li>
+		<li><a href="/admin_panel">ADMIN</a></li>
 	</ul>
 </div>
 <div class="toClearBoth"></div>
