Widen the board

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -18,21 +18,24 @@
 			margin:20px;
 		}
 		.list li{
-			width: 80% ;
+			width: 90% ;
 			font-size: 20px ;
 			border-bottom:1px solid red;
 			padding: 15px ;
 			margin-top:20px;
 			margin-bottom:20px;
 		}
+		.list{
+			text-align: center;
+		}
 		ul li:last-child{
 			border:none;
 		}
 		.board{
-			width:25%;
+			width:40%;
 			background-color: yellow;
 			border-radius: 15px ;
-			margin-left:38.5%;
+			margin-left:30%;
 		}
 		.title{
 			font-size: 30px;
