--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 	<ul class="listH">
 		<li><a href="/board">BOARD</a></li>
 		<li><a href="/signup">SIGNUP</a></li>
-		<li><a href="#" class="logout">LOGOUT</a></li>
+		<li class="logout">LOGOUT</li>
 		<li><a href="/admin_panel">ADMIN</a></li>
 	</ul>
 </div>
