--- a/views/showNotice.ejs
+++ b/views/showNotice.ejs
@@ -67,6 +67,19 @@
 		<div class="dummy"></div>
 		
 	</div>
-	<% include scripts.ejs %>
+
+<script type="text/javascript" src="/javascripts/jscookie.js"></script>
+
+<script type="text/javascript">
+
+	
+		var logout = document.querySelector('.logout') ;
+	logout.onclick = function(){
+
+		Cookies.remove('token', {expires: 1}, {domain: 'localhost:3000'});
+		location.href='/login' ;
+	}
+	
+</script>
 </body>
 </html>
