--- a/views/styles.ejs
+++ b/views/styles.ejs
@@ -10,6 +10,11 @@
 		margin-left: 5% ;
 		border-radius: 10px;
 	}
+	.listH li {
+		color: red ;
+		text-decoration:none ;
+		font-size: 2.2vw ;
+	}
 	.listH li a{
 		color: red ;
 		text-decoration:none ;
@@ -20,6 +25,12 @@
 	}
 	.toClearFloat{
 		clear:both;
+	}
+	.listH li a:hover{
+		cursor: pointer ;
+	}
+	.listH li:hover{
+		cursor: pointer ;
 	}
 </style>
 </style>
