Add style to support Navbar

--- a/views/adminPanel.ejs
+++ b/views/adminPanel.ejs
@@ -5,6 +5,39 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style type="text/css">
+	.listH{
+		list-style-type:none ;	
+	}
+	.listH li{
+		padding: 15px ;
+		background-color: yellow ;
+		width: 15% ;
+		float:left ;
+		margin-left: 5% ;
+		border-radius: 10px;
+	}
+	.listH li {
+		color: red ;
+		text-decoration:none ;
+		font-size: 2.2vw ;
+	}
+	.listH li a{
+		color: red ;
+		text-decoration:none ;
+		font-size: 2.2vw ;
+	}
+	.listH li:first-child{
+		margin-left:12% ;
+	}
+	.toClearFloat{
+		clear:both;
+	}
+	.listH li a:hover{
+		cursor: pointer ;
+	}
+	.listH li:hover{
+		cursor: pointer ;
+	}
 		body{
 			margin:30px auto;
 			text-align: center ;
