Fix logout issues

--- a/views/addNotice.ejs
+++ b/views/addNotice.ejs
@@ -89,15 +89,22 @@
 
 	<script type="text/javascript" src="javascripts/jquery.min.js"></script>
 	<script type="text/javascript" src="javascripts/jscookie.js"></script>
-	<script type="text/javascript" src="javascripts/jqueryCookie.js"></script>
 	<script type="text/javascript">
 		if($('.message')){
 			setTimeout(function(){
 				$('.message').remove()
 			},3000)
 		}
-	</script>
-	
-	<% include scripts.ejs %>
+	</script>+
+
+<script type="text/javascript">
+
+	var logout = document.querySelector('.logout') ;
+	logout.onclick = function(){
+
+		Cookies.remove('token', {expires: 1}, {domain: 'localhost:3000'});
+		location.href='/login' ;
+	}
+</script>
 </body>
 </html>
