Correct logout issues

--- a/views/showNotice.ejs
+++ b/views/showNotice.ejs
@@ -59,7 +59,7 @@
 			<p>Footnotes and resource links</p>
 				<ul>
 					<%for(var i=0;i<notice.links.length;i++){%>
-						<li><a href="<%=notice.links[i]%>"><%=notice.links[i]%></a></li>
+						<li><%=notice.links[i]%></li>
 					<%}%>
 				</ul>
 			<%}%>
