--- a/views/board.ejs
+++ b/views/board.ejs
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style type="text/css">
-	
+
 	.listH li{
 		padding: 15px ;
 		background-color: yellow ;
@@ -173,6 +173,18 @@
 
 		</div>
 	</div>
-	<% include scripts.ejs %>
+
+
+<script type="text/javascript" src="/javascripts/jscookie.js"></script>
+
+<script type="text/javascript">
+
+	var logout = document.querySelector('.logout') ;
+	logout.onclick = function(){
+
+		Cookies.remove('token', {expires: 1}, {domain: 'localhost:3000'});
+		location.href='/login' ;
+	}
+</script>
 </body>
 </html>
